FIxed Token Provider, Complete Book Status Section